--- a/pom.xml
+++ b/pom.xml
@@ -2,20 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.2</version>
-<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
-
 
     <groupId>com.ginger</groupId>
     <artifactId>AI-Test</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>AI-Test</name>
     <description>AI-Test</description>
+
+    <properties>
+        <java.version>21</java.version>
+        <release.version>${project.version}</release.version>
+        <micrometer.tracing>1.4.2</micrometer.tracing>
+        <micrometer.prometheus>1.14.3</micrometer.prometheus>
+        <h2>2.3.232</h2>
+    </properties>
 
     <licenses>
         <license>
@@ -43,13 +48,6 @@
             </properties>
         </developer>
     </developers>
-
-    <properties>
-        <java.version>21</java.version>
-        <h2>2.3.232</h2>
-        <micrometer.tracing>1.4.2</micrometer.tracing>
-        <micrometer.prometheus>1.14.3</micrometer.prometheus>
-    </properties>
 
     <dependencies>
         <!-- ========== Spring Starters ========== -->
@@ -93,8 +91,8 @@
         <dependency> <!-- Dev tools -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
             <optional>true</optional>
+            <scope>runtime</scope>
         </dependency>
         <dependency> <!-- auto-completion framework -->
             <groupId>org.springframework.boot</groupId>
